# se-for-sci-example

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/integrator/: __init__.py
src/package/: __init__.py
tests/: test_basic.py
